--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -11,7 +11,8 @@
   align-items: center;
   justify-items: center;
   min-height: 100svh;
-  padding: 80px;
+  padding-top: 90px;
+  /* padding-top: 80px; */
   gap: 64px;
   font-family: var(--font-geist-sans);
 }
@@ -127,7 +128,8 @@ a.secondary {
 
 @media (max-width: 600px) {
   .page {
-    padding: 32px;
+    /* padding: 32px; */
+    padding-top: 80px;
     padding-bottom: 80px;
   }
 
