--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -1,35 +1,57 @@
 /* components/Header.module.css */
 .headerContainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 0;
-  background-color: #cfcdc3;
-  color: white;
-  width: 100%;
-  height: 200%;
-  box-sizing: border-box; /* Дополнительная мера предосторожности */
+	text-align:center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 5px 0px;
+	/* background-color: #cfcdc3; */
+	color: white;
+	width: 100%;
+	height: 200%;
+	box-sizing: border-box;
+	/* Дополнительная мера предосторожности */
+	background-color: rgb(110, 134, 134);
 }
 
 .logo {
-  font-weight: bold;
+	height: 300%;
+	text-align: center;
+	padding: 5px;
+	width: 20%;
+	font-weight: bold;
+	background-color: rgb(126, 138, 138);
 }
 
 .userInfo {
-  display: inline-block;
-  vertical-align: middle;
-  line-height: normal;
-  font-size: 16px;
+	height: 300%;
+	width: 20%;
+	display: inline-block;
+	vertical-align: middle;
+	line-height: normal;
+	font-size: 16px;
+	background-color: rgb(111, 124, 125);
 }
 
 .avatarImg {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin-right: 10px;
+	/* width: 25%; */
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	margin-right: 10px;
 }
 
 .dateTime {
-  font-size: 14px;
-  margin-left: 10px;
+	font-size: 10px;
+	margin-left: 10px;
+}
+
+.clock {
+	width: 46%;
+	max-width: 180px;
+	display: inline-block;
+	vertical-align: middle;
+	line-height: normal;
+	font-size: 16px;
+	/* background-color: aqua; */
 }
