--- a/frontend/src/components/RegisterForm.module.css
+++ b/frontend/src/components/RegisterForm.module.css
@@ -42,7 +42,8 @@
 }
 
 .submitBtn {
-  margin: 10px 10px 10px 0;
+  width: 50%;
+  margin: 15px 10px 10px 0;
   background-color: #1f9238;
   color: white;
   padding: 0.75rem 1.5rem;
