--- a/frontend/src/components/RegisterForm.module.css
+++ b/frontend/src/components/RegisterForm.module.css
@@ -1,20 +1,46 @@
 /* src/components/RegisterForm.module.css */
 
+/* @media screen and (min-width: 320px) {
+  .conteinerBase {
+    max-width: 320px;
+    margin: 0 auto;
+  }
+} */
 .conteiner {
   font-style: italic;
   font-size: 1.1em;
   font-weight: 300;
-  display:flex;
+  display: flex;
   justify-content: center;
   margin: 10px;
   width: 86%;
+  min-width: 310px;
   height: 30px;
   padding: 5px;
 }
 
+.conteinerBtn {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  width: 100%;
+}
+
+.leftDiv, .rightDiv {
+  width: calc(50% - 2px);
+  height: auto;
+  margin: 5px;
+}
+
+.leftDiv {
+  padding: 30px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+
 .registerForm {
-  /* margin-left: 10px; */
-  /* background-color: #005eff; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,7 +49,6 @@
   background-color: #fafafa;
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  /* z-index: 2001; */
 }
 
 .inputField {
@@ -39,24 +64,6 @@
   outline: none;
   border-color: #007aff;
   box-shadow: 0 0 4px rgba(0, 122, 255, 0.5);
-}
-
-.submitBtn {
-  width: 50%;
-  margin: 15px 10px 10px 0;
-  background-color: #1f9238;
-  color: white;
-  padding: 0.75rem 1.5rem;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: bold;
-  transition: all 0.3s ease;
-}
-
-.submitBtn:hover {
-  background-color: #005eff;
 }
 
 .formTitle {
@@ -77,27 +84,15 @@
   margin-top: 1rem;
 }
 
-/* ВЫБОР ФОТО АВАТАР */
 
-.fileInputContainer {
-  display: inline-block;
-  position: relative;
-  cursor: pointer;
-}
-
-.hiddenFileInput {
-  visibility: hidden; /* Скрываем стандартное поле ввода */
-  position: absolute;
-  width: 0;
-  height: 0;
-  overflow: hidden;
-}
-
-.fileInputButton {
-  margin: 10px 10px 10px 0;
+/* НОВАЯ СТИЛИЗАЦИЯ КНОПКИ "ФОТО" */
+.fileInputButton, .submitBtn {
+  width: 100%;
+  max-width: 200px;
+  margin: 0px;
   background-color: #437ebd;
   color: white;
-  padding: 0.75rem 1.5rem;
+  padding: 0.75rem 3.7rem;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -109,4 +104,47 @@
 .fileInputButton:hover {
   background-color: #005eff;
 }
+
+/* СОХРАНЁННЫЕ КЛАССЫ КНОПКИ */
+.submitBtn {
+  width: 100%;
+  max-width: 200px;
+  margin: 10px;
+  background-color: #1f9238;
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+}
+
+.submitBtn:hover {
+  background-color: #005eff;
+}
+
 /* ВЫБОР ФОТО АВАТАР */
+.fileInputContainer {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  width: 100%;
+}
+
+.hiddenFileInput {
+  visibility: hidden;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+}
+
+/* ПРЕВЬЮ ИЗОБРАЖЕНИЯ */
+.avatar {
+  margin: 10px;
+  width: 120px;
+  height: auto;
+  border-radius: 30%;
+}
