--- a/frontend/nextjs-dashboard/app/ui/global.css
+++ b/frontend/nextjs-dashboard/app/ui/global.css
@@ -16,3 +16,55 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+/* СПРЯТАТЬ СКРОЛЛБАР
+
+в файле прописать так
+<div className="no-scrollbar overflow-y-auto h-[300px]">
+  Ваш контент...
+</div> */
+/* globals.css */
+@layer base {
+  .no-scrollbar {
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    -ms-overflow-style: none; /* IE и Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
+
+/* КРАСИВЫЙ СКРОЛЛБАР
+<div className="beautiful-scroll overflow-y-auto h-[300px]">
+  <!-- Ваш контент -->
+</div>*/
+@layer base {
+  /* Красивая полоса прокрутки */
+  .beautiful-scroll::-webkit-scrollbar {
+    width: 10px;
+    background-color: transparent;
+  }
+
+  .beautiful-scroll::-webkit-scrollbar-thumb {
+    background-color: #5F6CFF;
+    border-radius: 5px;
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  }
+
+  .beautiful-scroll::-webkit-scrollbar-thumb:hover {
+    background-color: #3B4AEF;
+  }
+
+  .beautiful-scroll::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+
+  /* Дополнительно для Firefox и Edge */
+  .beautiful-scroll {
+    scrollbar-width: thin; /* Тонкая полоска */
+    scrollbar-color: #5F6CFF #f1f1f1; /* Бегунок / дорожка */
+  }
+}
+
+/* *** END *** КРАСИВЫЙ СКРОЛЛБАР */
