Настройка Таблицы Админ. Ячейки шапка-календарь, шапка параметров таблицы, Ячейки: Чекбокс, Время, Ячейка Аренда с вводом форматированного числа.

--- a/frontend/nextjs-dashboard/app/ui/global.css
+++ b/frontend/nextjs-dashboard/app/ui/global.css
@@ -165,3 +165,9 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 /* *** END *** ЗАСТАВКА ЗАГРУЗКИ loading.tsx */
+
+
+/* global.css */
+input[type='time']::-webkit-calendar-picker-indicator {
+  display: none;
+}
