--- a/frontend/nextjs-dashboard/app/ui/global.css
+++ b/frontend/nextjs-dashboard/app/ui/global.css
@@ -171,3 +171,113 @@ input[type='number']::-webkit-outer-spin-button {
 input[type='time']::-webkit-calendar-picker-indicator {
   display: none;
 }
+
+
+/* ДЛЯ ФИКСАЦИИ ШАПКИ И ПРОКРУТКИ ТЕЛА ТАБЛИЦЫ */
+
+.fixed-table {
+  display: block;
+  height: 40px; /* Высота контейнера с таблицей, регулируется по желанию */
+  position: relative;
+  /*overflow-x: auto;  Горизонтальная прокрутка при необходимости */
+}
+
+.fixed-table thead,
+.fixed-table tbody,
+.fixed-table tfoot {
+  display: table;
+  width: 100%;
+  table-layout: fixed; /* Важно для сохранения ширины столбцов */
+}
+
+.fixed-table thead th {
+  position: sticky;
+  top: 0;
+  z-index: 1; /* Шапка поверх остальных элементов */
+  background-color: white; /* Цвет фона шапки, чтобы скрыть элементы под ней */
+}
+
+.fixed-table tbody {
+  display: block;
+  max-height: calc(300px - 50px); /* Максимальная высота блока прокрутки минус высота шапки */
+  overflow-y: auto; /* Прокрутка вверх-вниз */
+}
+
+.fixed-table tfoot {
+  display: table-header-group; /* Подвал всегда внизу */
+}
+
+.beautiful-scroll::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+}
+
+.beautiful-scroll::-webkit-scrollbar-thumb {
+  background-color: #5F6CFF;
+  border-radius: 5px;
+  box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+}
+
+.beautiful-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #3B4AEF;
+}
+
+.beautiful-scroll::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+.beautiful-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #5F6CFF #f1f1f1;
+}
+
+/* END *** ДЛЯ ФИКСАЦИИ ШАПКИ И ПРОКРУТКИ ТЕЛА ТАБЛИЦЫ */
+
+/* ===================================================== */
+/* ДЛЯ ФИКСАЦИИ ШАПКИ */
+
+/* Контейнер для шапки таблицы */
+.sticky-head {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: white;
+}
+
+/* Прокручиваемая зона для тела и подвала */
+.beautiful-scroll {
+  @apply overflow-y-auto;
+  max-height: 600px; /* Ограничиваем максимальную высоту */
+}
+
+/* Приведение ширины ячеек к общему значению */
+/* .w-[24px], .w-[148px], .w-[135px], .w-[92px], .w-[300px] {
+  box-sizing: border-box;
+} */
+
+/* Красивый скроллбар */
+.beautiful-scroll::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+}
+
+.beautiful-scroll::-webkit-scrollbar-thumb {
+  background-color: #5F6CFF;
+  border-radius: 5px;
+  box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+}
+
+.beautiful-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #3B4AEF;
+}
+
+.beautiful-scroll::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+.beautiful-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #5F6CFF #f1f1f1;
+}
+
+/* END *** ДЛЯ ФИКСАЦИИ ШАПКИ */
