--- a/frontend/nextjs-dashboard/app/ui/global.css
+++ b/frontend/nextjs-dashboard/app/ui/global.css
@@ -72,9 +72,6 @@ input[type='number']::-webkit-outer-spin-button {
 /* ================================ */
 
 /* ЗАСТАВКА ЗАГРУЗКИ loadung.tsx */
-
-/* styles.css или global.css */
-
 @keyframes pulse {
   0%, 100% {
     transform: scale(1);
@@ -141,10 +138,6 @@ input[type='number']::-webkit-outer-spin-button {
   font-size: 1.0em;          /* Большой красивый шрифт */
   letter-spacing: 0.05em;    /* Немного увеличить межбуквенное пространство */
 }
-
-/* .button-container {
-  /* margin-top: auto;            Отступ кнопки от остальных элементов
-} */
 
 /* Стилизация кнопки */
 .loading-button {
@@ -234,6 +227,7 @@ input[type='time']::-webkit-calendar-picker-indicator {
 /* END *** ДЛЯ ФИКСАЦИИ ШАПКИ И ПРОКРУТКИ ТЕЛА ТАБЛИЦЫ */
 
 /* ===================================================== */
+
 /* ДЛЯ ФИКСАЦИИ ШАПКИ */
 
 /* Контейнер для шапки таблицы */
@@ -249,11 +243,6 @@ input[type='time']::-webkit-calendar-picker-indicator {
   @apply overflow-y-auto;
   max-height: 600px; /* Ограничиваем максимальную высоту */
 }
-
-/* Приведение ширины ячеек к общему значению */
-/* .w-[24px], .w-[148px], .w-[135px], .w-[92px], .w-[300px] {
-  box-sizing: border-box;
-} */
 
 /* Красивый скроллбар */
 .beautiful-scroll::-webkit-scrollbar {
@@ -281,3 +270,16 @@ input[type='time']::-webkit-calendar-picker-indicator {
 }
 
 /* END *** ДЛЯ ФИКСАЦИИ ШАПКИ */
+
+
+/* АНИМАЦИЯ ЗАГРУЗКИ ОТЧЕТА ТАБЛИЦЫ АДМИНИСТРАТОРА */
+
+@keyframes fade-in {
+  from { opacity: 0; transform: translateY(-10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+.animate-fade-in {
+  animation: fade-in 0.3s ease-out;
+}
+
+/* *** END *** АНИМАЦИЯ ЗАГРУЗКИ ОТЧЕТА ТАБЛИЦЫ АДМИНИСТРАТОРА */
