--- a/frontend/nextjs-dashboard/app/ui/global.css
+++ b/frontend/nextjs-dashboard/app/ui/global.css
@@ -422,7 +422,26 @@ input[type="text"] {
   /* #admin-report-table button {
     font-size: 0.75rem;
     padding: 0.25rem 0.5rem;
-  } 
+  }
 } */
 
 /* === END: МОБИЛЬНЫЙ: СТИЛИ ТАБЛИЦЫ === */
+
+
+/* === СТИЛИ для React Big Calendar === */
+
+@import 'react-big-calendar/lib/css/react-big-calendar.css';
+
+.rbc-event {
+    background-color: #2c5e1a;
+    color: white;
+    border-radius: 4px;
+    padding: 2px 4px;
+    font-size: 0.8em;
+}
+
+.rbc-day-bg {
+    min-height: 100px;
+}
+
+/* === END: СТИЛИ для React Big Calendar === */
