5+ Настроено Модальное окно для броней в календаре. 2+ Удаление слота не работает. Сохранение данных слота в календарь и БД не работает

--- a/frontend/nextjs-dashboard/app/ui/global.css
+++ b/frontend/nextjs-dashboard/app/ui/global.css
@@ -470,3 +470,19 @@ input[type="text"] {
 }
 
 /* === END: СТИЛИ для React Big Calendar === */
+
+
+/* === ДЛЯ МОДАЛЬНОГО ОКНА В КАЛЕНДАРЕ === */
+
+dialog.modal {
+  border: none;
+  border-radius: 0.5rem;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+  padding: 0;
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* === END: ДЛЯ МОДАЛЬНОГО ОКНА В КАЛЕНДАРЕ === */
